--- a/tycam/index.css
+++ b/tycam/index.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: #FAFAFA;
+    background-color: #F5F5F5;
 }
 
 .body {
@@ -42,9 +42,22 @@ html, body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 陰影 */
 }
 
-.column-canvas canvas {
+.canvas-block canvas {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1 / 1; /* 確保1:1比例 */
     border-radius: 15px; /* 圓角 */
-    transform: scale(0.9); /* 縮小 canvas 內容 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 陰影 */
+}
+
+
+.canvas-block {
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .column-classBar {
@@ -74,7 +87,7 @@ html, body {
     width: 3%;
     margin-top: 2%;
     margin-bottom: 2%;
-    background-color: #FAFAFA;
+    background-color: #F5F5F5;
     
 }
 
@@ -83,8 +96,36 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
-    height: 60%;
+    width: 80%;
+    height: 80%;
     border-radius: 15px;
     background-color: #ffffff;
 }
+
+.round-button {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    background-color: #E1F5FE;
+    transition: background-color 0.3s; /* 平滑過渡效果 */
+  }
+
+  .round-button .material-icons {
+    font-size: 24px;
+  }
+
+  .round-button:hover {
+    background-color: #ECEFF1; /* 滑鼠懸停時的背景色 */
+  }
+
+  .button-class {
+    width: 100%;
+    height: 50px;
+  }
