--- a/tycam/index.css
+++ b/tycam/index.css
@@ -1,3 +1,7 @@
+:root {
+    --luck-color: #E1F5FE;
+  }
+
 html, body {
     margin: 0;
     padding: 0;
@@ -54,7 +58,7 @@ html, body {
 
 
 .canvas-block {
-    margin-top: 10%;
+    margin-top: 3%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -115,7 +119,7 @@ html, body {
     font-size: 24px;
     border: none;
     cursor: pointer;
-    background-color: #E1F5FE;
+    background-color: var(--luck-color);
     transition: background-color 0.3s; /* 平滑過渡效果 */
   }
 
@@ -133,9 +137,17 @@ html, body {
     font-size: 24px;
     border: none;
     cursor: pointer;
-    background-color: #E1F5FE;
+    background-color: var(--luck-color);
     transition: background-color 0.3s; /* 平滑過渡效果 */
   }
+
+  .openfile-samll:hover {
+    background-color: #ECEFF1; /* 滑鼠懸停時的背景色 */
+  }
+
+    .openfile-button:hover {
+        background-color: #ECEFF1; /* 滑鼠懸停時的背景色 */
+    }
 
   .round-button .material-icons {
     font-size: 24px;
@@ -160,6 +172,10 @@ html, body {
     box-sizing: border-box; /* 包括內邊距和邊框在內的完整寬度 */
 }
 
+.button-class:hover {
+    background-color: #F5F5F5; /* 滑鼠懸停時的背景色 */
+    }
+
   .button-student {
     width: fill-available;
     height: 60px;
@@ -175,6 +191,10 @@ html, body {
     box-sizing: border-box; /* 包括內邊距和邊框在內的完整寬度 */
 }
 
+.button-student:hover {
+    background-color: #F5F5F5; /* 滑鼠懸停時的背景色 */
+    }
+
   .openfile-button {
     margin: 4%;
     width: 92%;
@@ -186,7 +206,7 @@ html, body {
     padding: 0;
     font-size: 24px;
     border: none;
-    background-color: #E1F5FE;
+    background-color: var(--luck-color);
     transition: background-color 0.3s; /* 平滑過渡效果 */
   }
 
@@ -226,4 +246,20 @@ html, body {
 
 .student-Bar::-webkit-scrollbar {
     display: none; /* Chrome, Safari 和 Opera */
+}
+
+.cap-inf {
+    width: 100%;
+    height: 100%;
+}
+
+.student-information {
+    width: 100%;
+    height: 5%;
+    background-color: var(--luck-color);
+    border-radius: 20px; /* 圓角 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
 }
